@@ -21,7 +21,13 @@
     <pcl level="3e"/>
   <!--no pjl--><!--No "text"?--></lang>
   <autodetect>
-  <!--no known parport probe information--></autodetect>
+    <parallel>
+      <cmdset>MLC,PCL,PML,DESKJET,DW-PCL</cmdset>
+      <description>HP Color Inkjet CP1700</description>
+      <manufacturer>HEWLETT-PACKARD</manufacturer>
+      <model>HP Color Inkjet CP1700</model>
+    </parallel>
+  </autodetect>
   <functionality>A</functionality>
   <driver>hpijs</driver>
   <comments>
