@@ -1,4 +1,9 @@
-2004-11-30  Tim Waugh <twaugh@redh at.com>
+2004-12-02  Tim Waugh <twaugh@redhat.com>
+
+	* printer/HP-Color_Inkjet_Printer_CP1700.xml: Added IEEE 1284
+	  information (RH bug #141594).
+
+2004-11-30  Tim Waugh <twaugh@redhat.com>
 
 	* printer/Samsung-ML-1710.xml: Added IEEE 1284
 	  information (RH bug #141163).
